--- a/EHospital.Patient.Data/EHospital.Reports.Data.csproj
+++ b/EHospital.Patient.Data/EHospital.Reports.Data.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\EHospital.Excel.Model\EHospital.Excel.Model.csproj" />
+    <ProjectReference Include="..\EHospital.Excel.Model\EHospital.Reports.Model.csproj" />
   </ItemGroup>
 
 </Project>
